--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     implementation project(':ursmskit')
-//    implementation 'com.github.saingaung:AccKit:0.0.10'
+//    implementation 'com.github.comquas:ursmskit:1.0.0'
 }
